# Copyright Jeron Lau 2017 - 2019.
# Dual-licensed under either the MIT License or the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "barg"
version = "0.0.3"
authors = ["Jeron Aldaron Lau <jeronaldaron@gmail.com>"]
edition = "2018"
license = "MIT / BSL-1.0"
documentation = "https://docs.rs/barg"
homepage = "https://free.plopgrizzly.com/barg"
repository = "https://github.com/plopgrizzly/barg"
readme = "README.md"
description = "3D vector graphics renderer."
keywords = ["graphics", "render", "vector", "3D", "render"]
categories = ["gui", "multimedia", "rendering::graphics-api"]

[dependencies]
# For Rendering including Text
fonterator = "0.4"

[dev-dependencies]
png = "0.14"
